dodanie styli css oraz ustawień do home.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 <!-- Font awesome 5 -->
 
 <!-- custom style -->
+<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css"/>
 
 <!-- custom javascript -->
 
