dodanie kategorii oraz instalacja bootstrapa

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,10 @@
 
 <!-- jQuery -->
 
-<!-- Bootstrap4 files--> 
-
+<!-- Skrypty Bootstrapa -->
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 <!-- Font awesome 5 -->
 
 <!-- custom style -->
@@ -38,3 +40,6 @@
 
 <!-- footer -->
 {% include "includes/footer.html" %}
+
+</body>
+</html>
