--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,6 +1,52 @@
 {% load static %}
-<header>
-    <nav>
-    	<p>navbar</p>
-    </nav>    
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <!-- Adres i ikony -->
+      <div class="d-flex">
+        <p class="navbar-text">
+          <i class="bi bi-geo-alt"></i> Adres Restauracji, 
+          <i class="bi bi-telephone"></i> Numer Telefonu
+        </p>
+      </div>
+  
+      <!-- Ikony społecznościowe -->
+      <div class="d-flex">
+        <a class="navbar-brand" href="#"><i class="bi bi-facebook"></i></a>
+        <a class="navbar-brand" href="#"><i class="bi bi-twitter"></i></a>
+        <a class="navbar-brand" href="#"><i class="bi bi-instagram"></i></a>
+        <a class="navbar-brand" href="#"><i class="bi bi-tripadvisor"></i></a>
+      </div>
+    </div>
+  </nav>
+  
+  <!-- Nawigacja -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Restauracja Ravier</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Reservation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <!-- Przycisk "Book a Table" -->
+        <button class="btn btn-outline-light ms-auto" type="button">Book a Table</button>
+      </div>
+    </div>
+  </nav>
+  
