dodanie ikon do navbar i footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 <!-- Font awesome 5 -->
-
+<script src="https://kit.fontawesome.com/dbe61c0818.js" crossorigin="anonymous"></script>
 <!-- custom style -->
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css"/>
 
