--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,22 @@
 {% load static %}
 <footer>
 	<p>Footer</p>
+	<nav class="navbar navbar-expand-lg navbar-black bg-light">
+	<div class="container-fluid">
+		<!-- Adres i ikony -->
+		<div class="d-flex">
+		  <p class="navbar-text">
+			<i class="fas fa-map-pin"></i> ul. Długa 1, 50-255 Wrocław
+		  </p>
+		</div>
+	
+		<!-- Ikony społecznościowe -->
+		<div class="d-flex">
+		  <a class="navbar-brand" href="#"><i class="fab fa-facebook"></i></a>
+		  <a class="navbar-brand" href="#"><i class="fab fa-twitter"></i></a>
+		  <a class="navbar-brand" href="#"><i class="fab fa-instagram"></i></a>
+		  <a class="navbar-brand" href="#"><i class="fab fa-youtube"></i></a>
+		</div>
+	  </div>
+	</nav>
 </footer>
