dodanie store.html

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -38,7 +38,7 @@
           </div> <!-- card-body.// -->
         </div> <!-- card .// -->
     
-         <p class="text-center mt-4">Nie masz konta? <a href="#">Rejestracja</a></p>
+         <p class="text-center mt-4">Nie masz konta? <a href="{% url 'register' %}">Rejestracja</a></p>
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     {% endif %}
