--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -39,13 +39,13 @@
               <a class="dropdown-item" href="#">Jedzenie</a>
             </div>
           <li class="nav-item">
-            <a class="nav-link" href="#">Reservation</a>
+            <a class="nav-link" href="{% url 'store' %}">Dostawy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="{% url 'login' %}">Kontakt</a>
           </li>
         </ul>
         <!-- Przycisk "Book a Table" -->
