Dodanie przykładowej stopki

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,22 +1,80 @@
 {% load static %}
+<hr>
 <footer>
-	<p>Footer</p>
-	<nav class="navbar navbar-expand-lg navbar-black bg-light">
-	<div class="container-fluid">
-		<!-- Adres i ikony -->
-		<div class="d-flex">
-		  <p class="navbar-text">
-			<i class="fas fa-map-pin"></i> ul. Długa 1, 50-255 Wrocław
-		  </p>
+	<div class="container">
+		<div class="footer-widgets">
+			<div class="row">
+				<div class="col-lg-3 col-sm-6">
+					<div class="foo-block">
+						<div id="block-3" class="widget widget-footer widget_block">
+							<h5 class="widgettitle wp-block-heading">Znakomita Italia</h5>
+						</div>
+						<div id="block-4" class="widget widget-footer widget_block widget_text">
+							<p>Wspaniała restauracja stworzona, aby zapewnić gościom wyjątkowe przeżycia w samym sercu miasta.</p>
+						</div>
+						<div id="block-5" class="widget widget-footer widget_block">
+							<div class="wp-block-buttons is-layout-flex wp-block-buttons-is-layout-flex">
+								<div class="wp-block-button">
+									<a class="wp-block-button__link">Zarezerwuj teraz</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<div class="foo-block">
+						<div id="block-6" class="widget widget-footer widget_block">
+							<h5 class="widgettitle wp-block-heading">Szybkie linki</h5>
+						</div>
+						<div id="block-7" class="widget widget-footer widget_block">
+							<ul>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Menu</a></li>
+								<li><a href="#">Rezerwacja</a></li>
+								<li><a href="#">Kontakt</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<div class="foo-block">
+						<div id="block-8" class="widget widget-footer widget_block">
+							<h5 class="widgettitle wp-block-heading">Ostatnie posty</h5>
+						</div>
+						<div id="block-9" class="widget widget-footer widget_block widget_recent_entries">
+							<ul class="wp-block-latest-posts__list wp-block-latest-posts">
+								<li><a class="wp-block-latest-posts__post-title" href="#">Popisowe danie</a></li>
+								<li><a class="wp-block-latest-posts__post-title" href="#">One Love Cocktail</a></li>
+								<li><a class="wp-block-latest-posts__post-title" href="#">Lekki deser jagodowy</a></li>
+								<li><a class="wp-block-latest-posts__post-title" href="#">Zajęcia z włoską pizzą</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6">
+					<div class="foo-block foo-last">
+						<div id="block-10" class="widget widget-footer widget_block">
+							<h5 class="widgettitle wp-block-heading">Kontakt</h5>
+						</div>
+						<div id="block-11" class="widget widget-footer widget_block">
+							<ul>
+								<li>ul. Długa 1, 50-255 Wrocław</li>
+								<li>71-777-77-77</li>
+								<li>contact@italia.com</li>
+							</ul>
+							<ul class="social-media social-media-footer d-flex">
+								<li><a class="social-facebook" href="#"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a class="social-twitter" href="#"><i class="fab fa-twitter"></i></a></li>
+								<li><a class="social-instagram" href="#"><i class="fab fa-instagram"></i></a></li>
+								<li><a class="social-youtube" href="#"><i class="fab fa-youtube"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-	
-		<!-- Ikony społecznościowe -->
-		<div class="d-flex">
-		  <a class="navbar-brand" href="#"><i class="fab fa-facebook"></i></a>
-		  <a class="navbar-brand" href="#"><i class="fab fa-twitter"></i></a>
-		  <a class="navbar-brand" href="#"><i class="fab fa-instagram"></i></a>
-		  <a class="navbar-brand" href="#"><i class="fab fa-youtube"></i></a>
+		<div class="copyright">
+			<div class="footer-copy"> <span class="footer-year">2023</span> &copy; Italia. Designed by Sanczo.</div>
 		</div>
-	  </div>
-	</nav>
+	</div>
 </footer>
