--- a/restaurant_app/static/css/style.css
+++ b/restaurant_app/static/css/style.css
@@ -1,3 +1,11 @@
 body{
     background-color: lightgray;
 }
+
+a{
+    color: #000;
+    text-decoration: none;
+}
+ul, li{
+    list-style: none;
+}
