zmiana modelu Product + dodanie przykładowej grafiki

--- a/templates/home.html
+++ b/templates/home.html
@@ -22,5 +22,8 @@
       {% endfor%}
       </tbody>
     </table>
+    <div class="intro-banner-wrap">
+        <img src="{% static 'images/natura.jpg' %}" class="img-fluid rounded">
+    </div>
 </div>
 {% endblock %}
