--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -45,11 +45,11 @@
             <a class="nav-link" href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Kontakt</a>
+            <a class="nav-link" href="#">Kontakt</a>
           </li>
         </ul>
         <!-- Przycisk "Book a Table" -->
-        <button class="btn btn-outline-light ms-auto" type="button">Book a Table</button>
+        <a href="{% url 'login' %}" class="btn btn-outline-light ms-auto" type="button">Book a Table</a>
       </div>
     </div>
   </nav>
