--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -8,7 +8,7 @@
         <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
           <article class="card-body">
             <header class="mb-4"><h4 class="card-title">Rejestracja</h4></header>
-            
+            {% include "includes/alerts.html" %}
             <form action={% url 'register' %} method="POST">
                 {{form.non_field_errors}}  
                 {% csrf_token %}
