--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -18,8 +18,9 @@
 
             <div class="card-body">
             <h4 class="card-title mb-4">Logowanie</h4>
+            {% include "includes/alerts.html" %}
             <form action={% url 'login' %} method="POST">
-
+            {% csrf_token %}
               <div class="form-group">
                  <input type="email" class="form-control" placeholder="Adres Email" name="email">
               </div> <!-- form-group// -->
@@ -28,7 +29,7 @@
               </div> <!-- form-group// -->
               
               <div class="form-group">
-                  <a href="#" class="float-right">Nie pamiętasz hasła?</a> 
+                <a href="{% url 'forgotPassword' %}" class="float-right">Nie pamiętasz hasła?</a>
                
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
