Podpiecie forgotPassword.html

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -52,7 +52,7 @@
                 </form>
             </article><!-- card-body.// -->
         </div> <!-- card .// -->
-        <p class="text-center mt-4">Masz konto? <a href="#">Zaloguj</a></p>
+        <p class="text-center mt-4">Masz konto? <a href="{% url 'login' %}">Zaloguj</a></p>
         <br><br>
     <!-- ============================ COMPONENT REGISTER  END.// ================================= -->
     
